--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ FLASK_ENV=development
 
 # Port to run on
 PORT=8443
+# Set to 'true' to wipe and recreate the database on startup (use with caution!)
+REINIT_DB=false
