fix snake in the game

--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,6 @@ FLASK_ENV=development
 # Port to run on
 PORT=8443
 # Set to 'true' to wipe and recreate the database on startup (use with caution!)
-REINIT_DB=false
+REINT_DB=false
+# Password for the /admin dashboard (change this!)
+ADMIN_PASSWORD=admin123
