replace user names with avatar system

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,11 @@
-# Copy this file to .env and customize
-# For local development:
-#   cp .env.example .env
-
-# Flask secret key (generate a random one for production)
-# To generate: python -c "import secrets; print(secrets.token_hex(32))"
-SECRET_KEY=your-secret-key-here-change-this
-
-# Environment: development or production
-FLASK_ENV=development
-
-# Database URL (optional - defaults to absolute path in app.py)
-# DATABASE_URL=sqlite:///instance/python_games.db
-
-# Port to run on
+# Port Configuration
 PORT=8443
-# Set to 'true' to wipe and recreate the database on startup (use with caution!)
-REINT_DB=false
-# Password for the /admin dashboard (change this!)
-ADMIN_PASSWORD=admin123
+
+# Admin Panel Password
+ADMIN_PASSWORD=your_secure_password_here
+
+# Flask Secret Key (for sessions)
+SECRET_KEY=your_secret_key_here
+
+# Flask Environment (development or production)
+FLASK_ENV=development
