--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ SECRET_KEY=your_secret_key_here
 
 # Flask Environment (development or production)
 FLASK_ENV=development
+# Database Configuration (PostgreSQL)
+# Format: postgresql://user:password@localhost:5432/dbname
+DATABASE_URL=postgresql://localhost/python_games
